@@ -1,3 +1,9 @@
+2009-10-16  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/DataServer.pm: Do not process disabled modules.
+
+	* bin/pandora_server: Start logging before trying to connect to the DB.
+
 2009-10-16  Sancho Lerena <slerena@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Keepalive was not working properly. Keepalive
